# scrawl

./: .env.example  .gitignore  Dockerfile  README.md  check_links.md  hello.py  main.py  pyproject.toml
agents/: browser_research.py  example_builder.py  research.py
database/: db.py  research_data.db
examples/ai_example_projects/996.ICU Awareness App/: example_0.py  example_2.py  example_4.py
examples/ai_example_projects/AI Sentiment Analysis Web App/: example_0.py  example_2.py  example_4.py  example_6.py
examples/ai_example_projects/Airfoil Web App with Flask/: example_0.py
examples/ai_example_projects/FastAPI with SurrealDB Integration/: example_0.py  example_2.py
examples/ai_example_projects/Gemini AI Example App Suite/: example_0.py  example_2.py  example_4.py
examples/ai_example_projects/Gemini AI Web App/: example_0.py  example_10.py  example_12.py  example_16.py  example_2.py  example_4.py  example_6.py  example_8.py
examples/ai_example_projects/Google Duplex Implementation/: example_0.py
examples/ai_example_projects/Google-Duplex-like Dialogflow App/: example_0.py  example_10.py  example_12.py  example_14.py  example_16.py  example_18.py  example_2.py  example_20.py  example_22.py  example_24.py  example_26.py  example_28.py  example_4.py  example_6.py  example_8.py
examples/ai_example_projects/Open Source AI Web App/: example_0.py  example_10.py  example_12.py  example_14.py  example_18.py  example_2.py  example_20.py  example_22.py  example_24.py  example_26.py  (+8 more)
pydantic_ex/: weather.py
testing/: test_example.py  test_research.py
(+14 files in other folders)
